fix jumping checkout overlay content

--- a/src/sass/component/_checkout-overlay.scss
+++ b/src/sass/component/_checkout-overlay.scss
@@ -14,4 +14,8 @@
     align-items: flex-end;
     width: 100%;
   }
+
+  &__paypal-button {
+    height: 44px;
+  }
 }
